--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
         <span class="minimize"></span>
         <span class="maximize"></span>
       </div>
+      <p>Type 'help' to know other commands</p>
       <p>visitor@terminal.garvit.dev:~$</p>
     </div>
     <div class="body">
