--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/garvit-haswani-6850ba29b/" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="https://x.com/GarvitHaswani" aria-label="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="#" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://github.com/cybobug" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
                     <a href="https://medium.com/@garvithaswani28" aria-label="Medium"><i class="fa-brands fa-medium"></i></a>
                 </div>
                 <div class="button-group">
@@ -95,6 +95,7 @@
                 <p>
                   Rubber Ducky Payloads is a project that focuses on creating and deploying payloads using the Rubber Ducky device, a small, USB-powered device disguised as a rubber duck, to execute malicious scripts on vulnerable systems.
                 </p>
+                <a href="https://github.com/cybobug/Rubber-Ducky-Pico-Payloads" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
                 <div class="tags">
                   <span>Raspberry Pi</span>
                   <span>Python</span>
@@ -109,6 +110,7 @@
                 <p>
                   A port scanner is a network security tool used to identify open ports on a target system, helping to assess vulnerabilities and potential attack vectors.
                 </p>
+                <a href="https://github.com/cybobug/Port-Scanner" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
                 <div class="tags">
                   <span>Python</span>
                   <span>Networking</span>
@@ -120,6 +122,7 @@
                 <p>
                   A password manager is a software application that securely stores and manages your passwords, helping you create and remember strong, unique passwords.
                 </p>
+                <a href="https://github.com/cybobug/Password-Manager" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
                 <div class="tags">
                   <span>C++</span>
                   <span>Security</span>
@@ -132,6 +135,7 @@
                 <p>
                   Treasure Island is a classic adventure novel by Robert Louis Stevenson.
                 </p>
+                <a href="https://github.com/cybobug/Classical-Games-Python-" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
                 <div class="tags">
                   <span>React</span>
                   <span>TypeScript</span>
@@ -144,6 +148,7 @@
                 <p>
                   Rock, Paper, Scissors is a simple hand game where two players simultaneously form one of three shapes with their hands.
                 </p>
+                <a href="https://github.com/cybobug/Classical-Games-Python-" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
                 <div class="tags">
                   <span>React</span>
                   <span>TypeScript</span>
@@ -156,6 +161,7 @@
                 <p>
                   Hangman is a classic word-guessing game where players try to guess a hidden word by suggesting letters one at a time..
                 </p>
+                <a href="https://github.com/cybobug/Classical-Games-Python-/tree/main/Hangman" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
                 <div class="tags">
                   <span>React</span>
                   <span>TypeScript</span>
@@ -205,7 +211,7 @@
       <div class="social-icons">
           <a href="https://www.linkedin.com/in/garvit-haswani-6850ba29b/" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://x.com/GarvitHaswani" aria-label="Twitter"><i class="fa-brands fa-x-twitter"></i></a>
-          <a href="#" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/cybobug" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
           <a href="https://medium.com/@garvithaswani28" aria-label="Medium"><i class="fa-brands fa-medium"></i></a>
       </div>
       <ul class="list">
