--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 <img src="images/prjct1.jpg" alt="Ducky payloads Preview" />
                 <h3>Rubber ducky Payloads</h3>
                 <p>
-                  Rubber Ducky Payloads is a project that focuses on creating and deploying payloads using the Rubber Ducky device, a small, USB-powered device disguised as a rubber duck, to execute malicious scripts on vulnerable systems.
+                  Rubber Ducky Payloads is a project that focuses on creating and deploying payloads using the Rubber Ducky device, a small, USB-powered device...
                 </p>
-                <a href="https://github.com/cybobug/Rubber-Ducky-Pico-Payloads" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
+                <a href="https://github.com/cybobug/Rubber-Ducky-Pico-Payloads" class="read-more"><i class="fa-brands fa-github"></i></i> 🡲</a>
                 <div class="tags">
                   <span>Raspberry Pi</span>
                   <span>Python</span>
@@ -110,7 +110,7 @@
                 <p>
                   A port scanner is a network security tool used to identify open ports on a target system, helping to assess vulnerabilities and potential attack vectors.
                 </p>
-                <a href="https://github.com/cybobug/Port-Scanner" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
+                <a href="https://github.com/cybobug/Port-Scanner" class="read-more"><i class="fa-brands fa-github"></i></i> 🡲</a>
                 <div class="tags">
                   <span>Python</span>
                   <span>Networking</span>
@@ -120,9 +120,9 @@
                 <img src="images/prjct3.jpg" alt="PasswordMan Preview" />
                 <h3>Password Manager.</h3>
                 <p>
-                  A password manager is a software application that securely stores and manages your passwords, helping you create and remember strong, unique passwords.
+                  A password manager is a software application that securely stores and manages your passwords, helping you create and remember strong...
                 </p>
-                <a href="https://github.com/cybobug/Password-Manager" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
+                <a href="https://github.com/cybobug/Password-Manager" class="read-more"><i class="fa-brands fa-github"></i></i> 🡲</a>
                 <div class="tags">
                   <span>C++</span>
                   <span>Security</span>
@@ -133,9 +133,9 @@
                 <img src="images/prjct4.jpg" alt="Terminal Portfolio Preview" />
                 <h3>Treasure Island.</h3>
                 <p>
-                  Treasure Island is a classic adventure novel by Robert Louis Stevenson.
+                  Treasure Island is a classic adventure novel by Robert Louis Stevenson. Quest for buried pirate treasure, facing danger, mutiny...
                 </p>
-                <a href="https://github.com/cybobug/Classical-Games-Python-" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
+                <a href="https://github.com/cybobug/Classical-Games-Python-" class="read-more"><i class="fa-brands fa-github"></i></i> 🡲</a>
                 <div class="tags">
                   <span>React</span>
                   <span>TypeScript</span>
@@ -148,7 +148,7 @@
                 <p>
                   Rock, Paper, Scissors is a simple hand game where two players simultaneously form one of three shapes with their hands.
                 </p>
-                <a href="https://github.com/cybobug/Classical-Games-Python-" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
+                <a href="https://github.com/cybobug/Classical-Games-Python-" class="read-more"><i class="fa-brands fa-github"></i></i> 🡲</a>
                 <div class="tags">
                   <span>React</span>
                   <span>TypeScript</span>
@@ -161,7 +161,7 @@
                 <p>
                   Hangman is a classic word-guessing game where players try to guess a hidden word by suggesting letters one at a time..
                 </p>
-                <a href="https://github.com/cybobug/Classical-Games-Python-/tree/main/Hangman" class="read-more"><i class="fa-brands fa-github"></i></i>&#129138;</a>
+                <a href="https://github.com/cybobug/Classical-Games-Python-/tree/main/Hangman" class="read-more"><i class="fa-brands fa-github"></i></i> 🡲</a>
                 <div class="tags">
                   <span>React</span>
                   <span>TypeScript</span>
