--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   I am passionate about web development and design. With extensive experience in <strong>front-end</strong> and 
                   <strong>back-end technologies</strong>, I strive to create innovative and user-friendly solutions.
               </p>
-              <a href="#projects" class="btn">Explore Projects</a>
+              <a href="#project" class="btn">Explore Projects</a>
           </div>
       </section>
         <!-- Contact Section -->
@@ -217,7 +217,7 @@
       <ul class="list">
           <li><a href="#faq">FAQs</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#blog">Blog</a></li>
+          <li><a href="#blog-section">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
       </ul>
       <p class="copyright">© 2024 Garvit Haswani | All Rights Reserved</p>
