--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                         <p style="color: var(--text-secondary); margin-bottom: var(--space-4);">
                             Connect with me on Medium for cybersecurity insights and technical deep-dives.
                         </p>
-                        <a href="https://medium.com/@garvithaswani" class="btn btn-primary" target="_blank" rel="noopener">
+                        <a href="https://medium.com/@garvithaswani28" class="btn btn-primary" target="_blank" rel="noopener">
                             Follow on Medium
                         </a>
                     </div>
@@ -673,3 +673,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
